--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "coveralls": "npm run build && istanbul cover _mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage && npm run unbuild",
     "lint": "node_modules/.bin/coffeelint lib/*.coffee",
     "build": "mv lib src && coffee --no-header -o lib -c src",
-    "unbuild": "rm -rf lib && mv src lib",
-    "release": "npm run build && npm publish . && npm run unbuild"
+    "clean": "rm -rf lib && mv src lib",
+    "prepublish": "npm run build",
+    "postpublish": "npm run clean",
+    "publish": "npm run lint && npm test && npm publish"
   },
   "author": "Author <author@io.co.za>",
   "license": "MIT",
@@ -23,5 +25,12 @@
     "mocha-lcov-reporter": "0.0.1",
     "sinon": "^1.12.2",
     "sinon-chai": "^2.7.0"
+  },
+  "bugs": {
+    "url": "https://github.com/io-digital/nodebase/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/io-digital/nodebase"
   }
 }
