--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "lint": "node_modules/.bin/coffeelint lib/*.coffee",
     "build": "mv lib src && coffee --no-header -o lib -c src",
     "clean": "rm -rf lib && mv src lib",
-    "prepublish": "npm run build",
-    "postpublish": "npm run clean",
-    "release": "npm run lint && npm test && npm publish"
+    "release": "npm run lint && npm test && npm run build && npm publish && npm run clean"
   },
   "author": "Author <author@io.co.za>",
   "license": "MIT",
