--- a/package.json
+++ b/package.json
@@ -1,34 +1,31 @@
 {
-  "name": "nodebase",
+  "name": "hughes-bgan-prompt",
   "version": "0.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha",
-    "coveralls": "npm run build && istanbul cover _mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage && npm run clean",
-    "lint": "node_modules/.bin/coffeelint lib/*.coffee",
-    "build": "mv lib src && coffee --no-header -o lib -c src",
-    "clean": "rm -rf lib && mv src lib",
-    "release": "npm run lint && npm test && npm run build && npm publish && npm run clean"
+  "description": "a terminal prompt for a hughes bgan",
+  "private": true,
+  "main": "bin/bgan",
+  "dependencies": {
+    "rl-socket-client": "^0.1.8"
   },
-  "author": "Author <author@io.co.za>",
-  "license": "MIT",
   "devDependencies": {
     "chai": "^2.1.0",
-    "coffee-script": "^1.9.1",
-    "coffeelint": "^1.9.2",
     "coveralls": "^2.11.2",
     "istanbul": "^0.3.6",
     "mocha": "^2.1.0",
-    "mocha-lcov-reporter": "0.0.1",
     "sinon": "^1.12.2",
     "sinon-chai": "^2.7.0"
   },
-  "bugs": {
-    "url": "https://github.com/io-digital/nodebase/issues"
+  "scripts": {
+    "test": "mocha"
   },
+  "author": "Ant Cosentino <ant@io.co.za>",
+  "license": "MIT",
+  "bin": "./bin/bgan",
   "repository": {
     "type": "git",
-    "url": "https://github.com/io-digital/nodebase"
+    "url": "https://github.com/io-digital/hughes-bgan-prompt"
+  },
+  "bugs": {
+    "url": "https://github.com/io-digital/hughes-bgan-prompt/issues"
   }
 }
